resources/css/combined.css
/* ... */
#product img{
  width:100%;
  height:auto;
}
#product-gallery{
}
#product-gallery ul{
  list-style: none;
}
#product-gallery li img{
  width:60%;
  height:auto;
  margin-bottom:10px;
  float:right;
  overflow-y:scroll;
}
#product-gallery li img:hover{
  cursor:pointer;
}
#product-detail p{
  font-size:1em;

}
.product-options{
  display:inline-block;
  padding-right:5px;

}
.form-control{
  min-width:50px;
  box-shadow:none;
  border-radius:0px;
}

.quantity-selector input{
  width:50px;
}
/* Select Styles */
select {
  background:white;
  border:none;
  border-radius:0;
  border:1px solid #ccc;
}
.select-option{
  border-radius:0;
}

/*============================================
        ABOUT PAGE
=============================================*/
.about{
  width:100%;
  padding:0;
  margin:0;
}
.about img{
  width:100%;
  height:auto;
}
.text{
  padding:40px;
  text-align: center;
}
.image{
  padding:0;
}

#quote{
  background:#F2F1EF;
  color:#6C7A89;
  text-align:center;
  padding:35px;
}
.about h2{
  font-size:1.3em;
}
.about h4{
  font-size:1em;
  font-weight:300;
}
/*============================================
     LOGIN/SIGNUP STYLES
=============================================*/
.input-sm{
  border-radius:0px;
}
.form-control:focus{
  border-color:black;
}

/*============================================
     CART STYLES
=============================================*/

#shipping-info{
  -webkit-transition: height 0.001s;
  -moz-transition: height 0.001s;
  -ms-transition: height 0.001s;
  -o-transition: height 0.001s;
  transition: height 0.001s;
}
#mobile-cart{
  display: none;
}
#normal-cart{
}

#cart-img img{
  width:100%;
  height:auto;
}

#cart-row{
  border:1px solid rgba(0,0,0,0.2);
  min-height:150px;
  padding-top:10px;
  padding-bottom:10px;
  margin-bottom:10px;
  position:relative;
}

#align-middle{
  padding:0;
  padding-top:4%;
}

#cart-row input{
  width:50px;
}

#cart-row a{
  color:black;
  margin-bottom:10px;
  padding-bottom:10px;
}

#summary{
  padding-top:50px;
  border-radius:0;
}
#summary li{
  border-radius:0;
}
#summary a{
  border-radius:0;
}

#summary .btn-default{
  margin-top:5px;
}

.form-control::-webkit-input-placeholder {
   color: #D4D4D4;
}

.form-control:-moz-placeholder { /* Firefox 18- */
   color: #D4D4D4;
}

.form-control::-moz-placeholder {  /* Firefox 19+ */
   color: #D4D4D4;
}

.form-control:-ms-input-placeholder {  
   color: #D4D4D4;
}

#coupon{
  padding:0;
}

.panel{
  -webkit-box-shadow:none;
  box-shadow:none;
}

.credit-card-input{
  background-image: url(../img/cards.jpg);
  background-position:2px 2px;
  background-size:45px 280px;
  background-repeat:no-repeat;
  padding-left:55px;
}
.defaultPosition{
  background-position:2px 2px;
}
.va{
  background-position:2px -40px;
}
.ma{
  background-position:2px -124px;
}
.mb{
  background-position:2px -166px;
}
.d{
  background-position:2px -208px;
}
.a{
  background-position:2px -250px;
}
/*============================================
     RECEIPT STYLES
=============================================*/
#align-middle-receipt{
  padding-top:5%;
}

/*============================================
     MINI-CART STYLES
=============================================*/
#mini-cart{
  width:300px;
  box-shadow:none;
  padding:20px;
}
#mini-cart .row{
  padding-top:5px;
  padding-bottom:5px;
}
/*============================================
     SEARCH STYLES
=============================================*/
#search-item:hover{
  cursor:pointer;
}
#search-item{
  position:relative;
}
.search-bar{
  padding-top:0px;
  width:240px;
  opacity:1;
  display:none;
  position:absolute;
  left:0;
  top:100%;
  z-index:999999;
  pointer-events:none;
  -webkit-transition: all 0.2s;
  -moz-transition: all 0.2s;
  transition: all 0.2s;
}
.search-bar .btn-default{
  margin-top:0px;
  border:none;
}
.search-form{
  float:left;
  width:200px;
}
.active-search{
  opacity:1;
  display:inline-block;
  pointer-events:auto;
}
#shop div{
  padding-left:0;
}

/*============================================
     CONTACT STYLES
=============================================*/
#contact-form input{
  display:block;
}

#order-history{
  padding-bottom:0;
}










.btn-default{
  border-radius:0px;
  border:2px solid black;
  background:none;
  color:black;
  margin-top:10px;

  font-size:1.2em;
  font-weight:400;
  letter-spacing:0.1em;
  font-size:1em;
  -webkit-transition: all 0.2s;
  -moz-transition: all 0.2s;
  transition: all 0.2s;
}
.btn-default:hover{
  background:black;
  color:white;
  border-color:black;
}
.btn-important{
  border-radius:0px;
  border:0px solid black;
  background:#6C7A89;
  color:white;
  margin-top:10px;

  font-size:1.2em;
  font-weight:400;
  letter-spacing:0.1em;
  font-size:1em;
  -webkit-transition: all 0.2s;
  -moz-transition: all 0.2s;
  transition: all 0.2s;
}
.btn-important:hover{
  background:black;
  color:white;
  border:none;
}
/* ... */

